# tizen-browser-30

./: .gbs.conf  AUTHORS  CMakeLists.txt  browser_config.h  build.sh  build_mobile.sh  cmakeconfig.h.cmake  manifest.xml.in  manifest.xml.in.mb
core/: BrowserLogger.h  BrowserServiceManager.h  CMakeLists.txt  main.cpp
core/AbstractInterfaces/: AbstractContextMenu.h  AbstractFavoriteService.h  AbstractPopup.h  AbstractRotatable.h  AbstractServiceDefinition.h  AbstractUIComponent.h
core/AbstractWebEngine/: AbstractWebEngine.h  State.h  TabId.cpp  TabId.h  TabIdTypedef.h  TabOrigin.h  WebConfirmation.cpp  WebConfirmation.h  WebEngineSettings.h
core/BasicUI/: AbstractMainWindow.h  Action.cpp  Action.h  EAction.cpp  EAction.h  MenuButton.cpp  MenuButton.h  NaviframeWrapper.cpp  NaviframeWrapper.h  PopupButtons.h
core/Config/: Config.cpp  Config.h  ConfigKey.h  ConfigValues.h.in
core/DownloadControl/: DownloadControl.cpp  DownloadControl.h
core/Logger/: AbstractLogger.h  DLOGLogger.cpp  DLOGLogger.h  Logger.cpp  Logger.h  LoggerTools.cpp  TextLogger.cpp  TextLogger.h  Useloggers.cpp
core/ServiceManager/: AbstractService.h  ServiceFactory.cpp  ServiceFactory.h  ServiceLib.cpp  ServiceLib.h  ServiceLoader.cpp  ServiceLoader.h  ServiceLoader_p.h  ServiceManager.cpp  ServiceManager.h  ServiceManager_p.h  service_macros.h
core/ServiceManager/Debug/: BrowserAssert.cpp  BrowserAssert.h  Lifecycle.h
core/Tools/: Blob.cpp  Blob.h  BookmarkFolder.cpp  BookmarkFolder.h  BookmarkItem.cpp  BookmarkItem.h  BrowserImage.cpp  BrowserImage.h  BrowserImageTypedef.h  CapiWebErrorCodes.cpp  CapiWebErrorCodes.h  EcoreTimerCaller.h  EflTools.cpp  EflTools.h  FeedChannel.cpp  FeedChannel.h  FeedItem.cpp  FeedItem.h  FocusManager.cpp  FocusManager.h  GeneralTools.h  QuickAccessItem.cpp  QuickAccessItem.h  SettingsEnums.h  SnapshotType.h  StringTools.cpp  StringTools.h  TabEnums.h  URIschemes.h  WorkQueue.h
core/Tools/edc/: Background.edc  BrowserTextButton.edc  CategoryButton.edc  ColorClasses.edc  EntryCustomLayout.edc  FolderImage.edc  IconButton.edc  InvisibleButton.edc  InvisibleButtonSwallow.edc  Spacer.edc  SpacerRect.edc  (+1 more)
doc/: Doxyfile  (+1 more)
res/: CMakeLists.txt
res/locale/: CMakeLists.txt  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  nb.po  nl.po  pl.po  pt_BR.po  pt_PT.po  ro.po  (+11 more)
services/: CMakeLists.txt
services/BookmarkDetailsUI/: BookmarkDetailsUI.cpp  BookmarkDetailsUI.h  CMakeLists.txt
services/BookmarkFlowUI/: BookmarkFlowUI.cpp  BookmarkFlowUI.h  CMakeLists.txt
services/BookmarkManagerUI/: BookmarkManagerUI.cpp  BookmarkManagerUI.h  CMakeLists.txt
services/BookmarkService/: BookmarkService.cpp  BookmarkService.h  CMakeLists.txt
services/CertificateService/: CMakeLists.txt  CertificateContents.cpp  CertificateContents.h
services/FindOnPageUI/: CMakeLists.txt  FindOnPageUI.cpp  FindOnPageUI.h
services/HistoryService/: CMakeLists.txt  HistoryItem.cpp  HistoryItem.h  HistoryItemTypedef.h  HistoryService.cpp  HistoryService.h  HistoryServiceTools.cpp  HistoryServiceTools.h
services/HistoryUI/: CMakeLists.txt  HistoryDeleteManager.h  HistoryPeriod.cpp  HistoryPeriod.h  HistoryUI.cpp  HistoryUI.h  HistoryUIFocusManager.cpp  HistoryUIFocusManager.h
services/MoreMenuUI/: CMakeLists.txt  MoreMenuUI.cpp  MoreMenuUI.h
services/PlatformInputManager/: CMakeLists.txt  PlatformInputManager.cpp  PlatformInputManager.h
services/QuickAccess/: CMakeLists.txt  DetailPopup.cpp  DetailPopup.h  QuickAccess.cpp  QuickAccess.h
services/SettingsUI/: CMakeLists.txt  SettingsAFCreator.cpp  SettingsAFCreator.h  SettingsAFProfile.cpp  SettingsAFProfile.h  SettingsAdvanced.cpp  SettingsAdvanced.h  SettingsDelPersData.cpp  SettingsDelPersData.h  SettingsHomePage.cpp  SettingsHomePage.h  SettingsMain.cpp  SettingsMain.h  SettingsManager.cpp  SettingsManager.h  SettingsPrettySignalConnector.h  SettingsPrivacy.cpp  SettingsPrivacy.h  SettingsUI.cpp  SettingsUI.h  SettingsUI_mob.cpp  SettingsUI_mob.h  SettingsUserAgent.cpp  SettingsUserAgent.h  UserAgentStrings.h
services/SimpleUI/: CMakeLists.txt  ContentPopup.cpp  ContentPopup.h  ContentPopup_mob.cpp  ContentPopup_mob.h  CustomPopup.cpp  CustomPopup.h  InputPopup.cpp  InputPopup.h  NotificationPopup.cpp  NotificationPopup.h  ProgressiveWebApp.cpp  ProgressiveWebApp.h  RadioPopup.cpp  RadioPopup.h  SimplePopup.cpp  SimplePopup.h  SimpleUI.cpp  SimpleUI.h  TextPopup.cpp  TextPopup.h  TextPopup_mob.cpp  TextPopup_mob.h  ViewManager.cpp  ViewManager.h
services/StorageService/: CMakeLists.txt  CertificateStorage.cpp  CertificateStorage.h  DBTools.cpp  DBTools.h  DriverManager.cpp  DriverManager.h  Field.cpp  Field.h  FoldersStorage.cpp  FoldersStorage.h  PWAStorage.cpp  PWAStorage.h  QuickAccessStorage.cpp  QuickAccessStorage.h  SQLDatabase.cpp  SQLDatabase.h  SQLDatabaseImpl.h  SQLTransactionScope.cpp  SQLTransactionScope.h  SettingsStorage.cpp  SettingsStorage.h  StorageException.cpp  StorageException.h  StorageExceptionInitialization.cpp  StorageExceptionInitialization.h  StorageService.cpp  StorageService.h
services/TabService/: CMakeLists.txt  TabService.cpp  TabService.h  TabServiceTypedef.h
services/TabUI/: CMakeLists.txt  PasswordUI.cpp  PasswordUI.h  TabUI.cpp  TabUI.h
services/WebEngineService/: CMakeLists.txt  WebEngineService.cpp  WebEngineService.h  WebView.cpp  WebView.h
services/WebPageUI/: ButtonBar.cpp  ButtonBar.h  CMakeLists.txt  EditQuickAccessUI.cpp  EditQuickAccessUI.h  URIEntry.cpp  URIEntry.h  WebPageUI.cpp  WebPageUI.h  WebPageUIStatesManager.cpp  WebPageUIStatesManager.h
services/ZoomUI/: CMakeLists.txt  ZoomUI.cpp  ZoomUI.h
unit_tests/: CMakeLists.txt  ut_Action.cpp  ut_BookmarkItem.cpp  ut_Config.cpp  ut_FavoriteService.cpp  ut_HomeGenerator.cpp  ut_PlatformInputManager.cpp  ut_SessionStorage.cpp  ut_StorageService.cpp  ut_WebEngineService.cpp  ut_coreService.cpp  ut_logger.cpp  ut_main.cpp
(+127 files in other folders)
