####################################################
#
#   Resource files
#
####################################################

project(${PROJECT_NAME})

#########################################################
# i18n text resources
#########################################################
add_subdirectory(locale)
