project(services)

add_subdirectory(WebEngineService)
add_subdirectory(QuickAccess)
add_subdirectory(HistoryUI)
add_subdirectory(TabUI)
add_subdirectory(SimpleUI)
add_subdirectory(SettingsUI)
add_subdirectory(WebPageUI)
add_subdirectory(BookmarkFlowUI)
add_subdirectory(BookmarkManagerUI)
add_subdirectory(StorageService)
add_subdirectory(HistoryService)
add_subdirectory(TabService)
add_subdirectory(PlatformInputManager)
add_subdirectory(BookmarkService)
add_subdirectory(CertificateService)
if (${PROFILE} MATCHES "mobile")    # mobile profile
    add_subdirectory(FindOnPageUI)
else (${PROFILE} MATCHES "mobile")
    add_subdirectory(ZoomUI)
endif (${PROFILE} MATCHES "mobile")
